Fix overflow tabella agenti

--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,8 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    height: min-content;
+    /* height: min-content; */
+    height: 42px;
     align-items: center;
     position: sticky;
     top: 0;
@@ -143,6 +144,8 @@ button:hover {
     flex-direction: column;
     align-items: center;
     text-align: center;
+    align-content: space-between;
+
 }
 
 div.scheda {
@@ -223,6 +226,12 @@ table th {
     outline: 4px solid orange;
 }
 
+/* stile specifico della sezione agenti */
+
+#agenti {
+    height: calc(100vh - 42px);
+}
+
 /* stile specifico della tabella gruppi */
 
 .gruppi {
@@ -256,8 +265,25 @@ input {
     height: 2rem;
 }
 
+.tabAgentiWrapper {
+    /* height: 40vh; */
+    overflow-y: auto;
+    width: 100%;
+}
+
 #elencoAgenti {
-    width: 100vw;
+    width: 100%;
+}
+
+#elencoAgenti th {
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    border: 0;
+}
+
+#elencoAgenti tr {
+    height: 2rem;
 }
 
 #elencoAgenti th:nth-child(1) {
@@ -269,7 +295,7 @@ input {
 }
 
 #elencoAgenti th:nth-child(3) {
-    width: 10vw;
+    width: 2rem;
 }
 
 #elencoAgenti th:nth-child(4) {
